[gd_scene load_steps=4 format=2]

[ext_resource path="res://Sprites/ship1.png" type="Texture" id=1]
[ext_resource path="res://Ship.gd" type="Script" id=2]
[ext_resource path="res://Ball.tscn" type="PackedScene" id=3]

[node name="Ship" type="StaticBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.186676, -2.24492 )
rotation = -0.00381136
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 0.186676, 86.7551 )
rotation = -0.00381136
polygon = PoolVector2Array( 3.58063, -132.757, 6.00371, -132.533, 9.85144, -120.688, 11.8798, -127.521, 14.3365, -127.434, 15.965, -116.878, 16.2215, -106.174, 14.1036, -96.5197, 20.0082, -85.6456, 25.8073, -85.1934, 26.028, -69.4779, -25.5305, -70.0544, -25.2384, -84.6999, -18.5243, -86.7654, -14.1399, -96.6274, -16.1875, -105.406, -16.6136, -115.135, -14.2271, -127.71, -11.6656, -127.756, -10.1704, -120.931, -6.07901, -132.579, -3.73915, -132.904, -1.49622, -137.016, 1.39898, -136.949 )

[node name="NextBall" parent="." instance=ExtResource( 3 )]
position = Vector2( 0.212677, 4.27495 )
mode = 1

[node name="BallPosition" type="Position2D" parent="."]
position = Vector2( -0.0848389, -53.9506 )
rotation = -0.00381136

[node name="shootTimer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="ShootBar" type="ProgressBar" parent="."]
margin_left = -47.0
margin_top = 52.0
margin_right = 49.0
margin_bottom = 70.0
step = 1.0
rounded = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="shootTimer" to="." method="_on_shootTimer_timeout"]
